@@ -1,0 +1,3 @@
+<body>
+  <meta content="0; url='http://www.mysite.com/'" http-equiv="refresh">
+</body>
